<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="?attr/colorPrimary">

        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/iv_login_logo"
            android:layout_width="236dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/img_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_login_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/txt_login_title"
            android:textColor="@color/textWhite"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_please_input_user_name"
            android:inputType="textEmailAddress"
            android:maxLength="26" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_please_input_pwd"
            android:inputType="textPassword"
            android:maxLength="16" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_auto_login"
                android:textColor="@color/lightBlack"
                android:textSize="17sp" />

        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/textWhite"
            android:textSize="22sp" />

        <TextView
            style="@style/Login_txt"
            android:layout_marginTop="30dp"
            android:text="@string/txt_login_tip" />

        <TextView
            android:id="@+id/tv_problem"
            android:clickable="true"
            android:onClick="forwardWeb"
            style="@style/Login_txt"
            android:text="@string/txt_login_tip2" />

    </LinearLayout>

</LinearLayout>